--- a/index.html
+++ b/index.html
@@ -25,33 +25,11 @@
 		flex-wrap: wrap;
 		gap: 15px;
 	}
-
-	.favorites img {
-		width: 150px;
-	}
 </style>
 
 <body>
-	<h1>1번째 고양이 가라사대</h1>
-	<form>
-		<input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
-		<button type="submit">생성</button>
-	</form>
-	<div class="main-card">
-		<img src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react" alt="고양이" width="400" />
-		<button>🤍</button>
-	</div>
-	<ul class="favorites">
-		<li>
-			<img src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react" alt="고양이" />
-		</li>
-		<li>
-			<img src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react" alt="고양이" />
-		</li>
-		<li>
-			<img src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react" alt="고양이" />
-		</li>
-	</ul>
+	<div id="app"></div>
+
 	<script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
 	<script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
 	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
@@ -59,67 +37,58 @@
 
 		console.log("야옹");
 
-		const title = (
-			<h1>1번째 고양이 가라사대</h1>
-		);
+		const Title = (props) => {
+			console.log(props);
+			return (
+				<h1>{props.children}</h1>
+			);
+		}
 
 
-		const form = (
-			<form>
-				<input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
-				<button type="submit">생성</button>
-			</form>
-		);
+		const Form = () => {
+			return (
+				<form>
+					<input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
+					<button type="submit">생성</button>
+				</form>
+			);
+		}
+
+		function CatItem(props) {
+			return (
+				<li>
+					<img src={props.img} style={{ width: '150px' }} />
+				</li>
+			);
+		}
 
 
-		const catItem = (
-			<li>
-				<img src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react" alt="고양이" />
-			</li>
-		);
-
-		const favorites = (
-			<ul class="favorites">
-				{catItem}
-				{catItem}
-				{catItem}
-			</ul>
-		);
+		function Favorites() {
+			return (
+				<ul className="favorites">
+					<CatItem img="https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/inflearn" />
+					<CatItem img="https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript" />
+				</ul>
+			);
+		}
 
 
-		const mainCard = (
-			<div class="main-card">
-				<img src="https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react" alt="고양이" width="400" />
-				<button>🤍</button>
-			</div>
-		);
+		const MainCard = (props) => {
+			return (
+				<div className="main-card">
+					<img src={props.img} alt="고양이" width="400" />
+					<button>🤍</button>
+				</div>
+			);
+		}
 
-
-		// function sayHellow(name) {
-		// 	return "안녕" + name;
-		// }
-
-		// sayHellow("건의"); // 안녕 건의
-		// sayHellow("여러분"); // 안녕 여러분
-
-		// function Card(title, description) {
-		// 	<div>
-		// 		<h2>{title}</h2>
-		// 		{description}
-		// 	</div>
-		// }
-
-		// Card('리엑트 짱', '리엑트 입니다');
-		// Card('리엑트 싫어요', '리엑트 입니다2');
-
-		<card title="리엑트 짱" description="리엑트 입니다" />
 
 		const app = (
 			<div>
-				{title}
-				{form}
-				{mainCard}
-				{favorites}
+				<Title>1번째 고양이 가라사대</Title>
+				<Form />
+				<MainCard img="https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript" />
+				<Favorites />
 			</div>
 		);
 
