--- a/index.html
+++ b/index.html
@@ -46,8 +46,19 @@
 
 
 		const Form = () => {
+			const [counter, setCounter] = React.useState(1);
+
+			console.log("카운터", counter);
+
+
+			function handleSubmit(e) {
+				e.preventDefault();
+				console.log("폼 전송됨");
+				setCounter(counter + 1);
+			}
+
 			return (
-				<form>
+				<form onSubmit={handleSubmit}>
 					<input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
 					<button type="submit">생성</button>
 				</form>
@@ -74,10 +85,18 @@
 
 
 		const MainCard = (props) => {
+			function handleHeartClick() {
+				console.log('클릭이벤트');
+			}
+
+			function handleMousrOver() {
+				console.log('마우스올라옴');
+			}
+
 			return (
 				<div className="main-card">
 					<img src={props.img} alt="고양이" width="400" />
-					<button>🤍</button>
+					<button onClick={handleHeartClick} onMouseOver={handleMousrOver}>🤍</button>
 				</div>
 			);
 		}
