--- a/index.html
+++ b/index.html
@@ -38,25 +38,13 @@
 		console.log("야옹");
 
 		const Title = (props) => {
-			console.log(props);
 			return (
 				<h1>{props.children}</h1>
 			);
 		}
 
 
-		const Form = () => {
-			const [counter, setCounter] = React.useState(1);
-
-			console.log("카운터", counter);
-
-
-			function handleSubmit(e) {
-				e.preventDefault();
-				console.log("폼 전송됨");
-				setCounter(counter + 1);
-			}
-
+		const Form = ({ handleSubmit }) => {
 			return (
 				<form onSubmit={handleSubmit}>
 					<input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
@@ -102,18 +90,40 @@
 		}
 
 
-		const app = (
-			<div>
-				<Title>1번째 고양이 가라사대</Title>
-				<Form />
-				<MainCard img="https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript" />
-				<Favorites />
-			</div>
-		);
+		const App = () => {
+			const CAT1 = "https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react";
+			const CAT2 = "https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/inflearn";
+			const CAT3 = "https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript";
+
+			const [counter, setCounter] = React.useState(1);
+			const [mainCat, setMainCat] = React.useState(CAT1);
+
+
+
+			console.log("카운터", counter);
+
+			function handleSubmit(e) {
+				e.preventDefault();
+				console.log("폼 전송됨");
+				setCounter(counter + 1);
+				setMainCat(CAT2);
+			}
+
+			return (
+				<div>
+					<Title>{counter}번째 고양이 가라사대</Title>
+					<Form handleSubmit={handleSubmit} />
+					<MainCard img={mainCat} />
+					<Favorites />
+				</div>
+			);
+		}
+
+
 
 		const 여기다가그려 = document.querySelector('#app');
 
-		ReactDOM.render(app, 여기다가그려);
+		ReactDOM.render(<App />, 여기다가그려);
 
 
 
