--- a/index.html
+++ b/index.html
@@ -62,33 +62,26 @@
 		}
 
 
-		function Favorites() {
+		function Favorites({ favorites }) {
+			const CAT1 = "https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react";
+			const CAT2 = "https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/inflearn";
+			const CAT3 = "https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript";
+
 			return (
 				<ul className="favorites">
-					<CatItem img="https://cataas.com/cat/BxqL2EjFmtxDkAm2/says/inflearn" />
-					<CatItem img="https://cataas.com/cat/18MD6byVC1yKGpXp/says/JavaScript" />
+					{favorites.map(cat => <CatItem img={cat} key={cat} />)}
 				</ul>
 			);
 		}
 
-
-		const MainCard = (props) => {
-			function handleHeartClick() {
-				console.log('클릭이벤트');
-			}
-
-			function handleMousrOver() {
-				console.log('마우스올라옴');
-			}
-
+		const MainCard = ({ mainCat, handleHeartClick }) => {
 			return (
 				<div className="main-card">
-					<img src={props.img} alt="고양이" width="400" />
-					<button onClick={handleHeartClick} onMouseOver={handleMousrOver}>🤍</button>
+					<img src={mainCat} alt="고양이" width="400" />
+					<button onClick={handleHeartClick}>🤍</button>
 				</div>
 			);
 		}
-
 
 		const App = () => {
 			const CAT1 = "https://cataas.com/cat/HSENVDU4ZMqy7KQ0/says/react";
@@ -97,8 +90,7 @@
 
 			const [counter, setCounter] = React.useState(1);
 			const [mainCat, setMainCat] = React.useState(CAT1);
-
-
+			const [favorites, Setfavorites] = React.useState([CAT1, CAT2]);
 
 			console.log("카운터", counter);
 
@@ -109,12 +101,17 @@
 				setMainCat(CAT2);
 			}
 
+			function handleHeartClick() {
+				console.log('하트 눌렀음');
+				Setfavorites([...favorites, CAT3]);
+			}
+
 			return (
 				<div>
 					<Title>{counter}번째 고양이 가라사대</Title>
 					<Form handleSubmit={handleSubmit} />
-					<MainCard img={mainCat} />
-					<Favorites />
+					<MainCard mainCat={mainCat} handleHeartClick={handleHeartClick} />
+					<Favorites favorites={favorites} />
 				</div>
 			);
 		}
